# romain-clement.net

./: .env.example  .eslintrc.js  .example.env  .gitignore  .nowignore  .travis.yml  404.html  CHANGELOG.md  CNAME  LICENSE  Pipfile  README.md  index.html  macros.py  mkdocs.yml  mypy.ini  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  renovate.json  sitemap.xml  sw.js  tsconfig.json
.github/workflows/: ci-cd.yml  cleanup.yml
.well-known/: keybase.txt
_nuxt/: 009a59f.js  00cfd93.js  00e0a0e.js  01fd6db.js  0210925.js  02f0209.js  036cb11.js  0450466.js  049f17a.js  057ed00.js  0672dd8.js  072630f.js  0737177.js  07c64a3.js  07fcf76.js  082343a.js  08329d2.js  097db52.js  09f22ef.js  0a03265.js  0a2038a.js  0b2293c.js  0e28897.js  102b1fa.js  104f96f.js  1071caf.js  12bc219.js  12f3fd1.js  13d65a1.js  146d8e0.js  146f9c9.js  14c8c86.js  1581964.js  15b2e50.js  1665cda.js  16c5d52.js  16f7d3a.js  1724d29.js  1772433.js  178fed5.js  (+441 more)
_nuxt/commons/: app.126a948.js  app.3bc6427.js  app.525e196.js  app.76fa16a.js  app.9eb5905.js  app.e3b90b0.js  app.f4e1239.js
_nuxt/content/: db-00303012.json  db-01b3f397.json  db-01e5fd90.json  db-0279fda8.json  db-04754625.json  db-047c5b70.json  db-05709c97.json  db-0633030b.json  db-06b1d8f3.json  db-082d7068.json  db-08ccaf26.json  db-09a9a4de.json  db-09fd88f2.json  db-0a73e659.json  db-0b3ae379.json  db-0bb6c688.json  db-0e0b7222.json  db-0e35709d.json  db-0f43ea44.json  db-0f83b757.json  db-0fc935fc.json  db-10486b1d.json  (+304 more)
articles/: index.html
backup/: LICENSE  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vue-shim.d.ts
components/: ContactForm.vue  CookieConsent.vue  Credits.vue  HomeCertifications.vue  HomeContact.vue  HomeFreelancing.vue  HomeHero.vue  HomeMusic.vue  HomeOpenSource.vue  HomeTalks.vue  ImageModal.vue  Logo.vue  ModalContactForm.vue  Navbar.vue  Separator.vue
content/: contact.md  design.md  freelancing.md  index.js  index.md  index.ts  legal.md
e2e_tests/: conftest.py  test_deployment.py
i18n/: common.ts  en.ts  fr.ts  hacker.ts  index.ts  term.ts
layouts/: default.vue  error.vue
locales/: index.js
middleware/: google-analytics-consent.js  matomo-consent.js
modules/: content.ts  plugin.template
overrides/: 404.html  article.html  common.html  main.html  robots.txt
pages/: contact.vue  freelance.vue  index.vue  software.vue
plugins/: dnt-support.js  dnt.js  font-awesome.ts  fontawesome.js  page-head.js
reading/: index.html
static/: gpg.asc
store/: analytics.js  consent.js  matomo.js
test/: utils.ts
tests/: conftest.py  test_analytics.py  test_feeds.py  test_hooks.py  test_well_known.py
und/: index.html
utils/: hooks.py
(+6296 files in other folders)
