[project]
name = "romain-clement.net"
description = "Romain Clement - Freelance Data / Machine Learning Engineer & Trainer"
version = "1.0.0"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
requires-python = "==3.13.*"
dependencies = [
    "babel==2.17.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.20",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-section-index==0.3.10",
    "mknotebooks==0.8.0",
    "readtime==3.0.0",
]

[dependency-groups]
dev = [
    "faker==37.8.0",
    "feedparser==6.0.12",
    "jsonschema==4.25.1",
    "jupyterlab==4.4.9",
    "notebook==7.4.7",
    "mypy==1.18.2",
    "matplotlib==3.10.6",
    "pandas==2.3.3",
    "pip-audit==2.9.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.13.3",
    "types-jsonschema>=4.25.1.20250822",
]

[tool.mypy]
show_error_codes = true
pretty = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "readtime.*"
ignore_missing_imports = true
